--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
+.app{
+  font-family: Arial, Helvetica, sans-serif;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
+  background: linear-gradient(to right, #74ebd5, #ACB6E5);
   min-height: 100vh;
+  padding: 50px 20px;
+}
+
+h1{
+  color: aliceblue;
+}
+
+.search{
+  margin: 20px 0;
+}
+
+.search form{
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin-bottom: 10px;
+}
+
+.search input {
+  padding: 10px;
+  font-size: 1em;
+  border: none;
+  border-radius: 5px 0 0 5px;
+  outline: none;
+  width: 200px;
+}
+
+.search button {
+  padding: 10px;
+  font-size: 1em;
+  border: none;
+  background-color: #4CAF50;
   color: white;
+  cursor: pointer;
+  border-radius: 0 5px 5px 0;
 }
 
-.App-link {
-  color: #61dafb;
+.search button:hover {
+  background-color: #45a049;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.search > button {
+  padding: 10px 20px;
+  font-size: 1em;
+  border: none;
+  background-color: #008CBA;
+  color: white;
+  cursor: pointer;
+  border-radius: 5px;
+}
+
+.search > button:hover {
+  background-color: #007B9E;
+}
+
+.error {
+  color: red;
+  margin-top: 20px;
 }
